Added Java 17 installation.